<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- android:icon="@drawable/ic_done" -->
    <item
        android:id="@+id/action_copy"
        android:title="@string/action_copy"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_view"
        android:title="@string/action_view"

        app:showAsAction="always" />
</menu>